--- a/web/app/components/left_sidebar/my_agenda_component.html.erb
+++ b/web/app/components/left_sidebar/my_agenda_component.html.erb
@@ -1,9 +1,5 @@
 <%= component_controller id: 'my-agenda', class: 'h-full' do %>
   <div class="h-full" data-target="left-sidebar--my-agenda.scrollContent">
-    <h2 class="flex-1 px-5 font-semibold leading-6 text-gray-800 group-hover:text-green-500 md:leading-normal text-md">
-      Minha agenda
-    </h2>
-
     <div id="calendar" data-target="left-sidebar--my-agenda.calendar" class="mt-3 select-none simple-calendar tap-highlight-none">
       <div class="calendar-heading">
         <%= reflex_tag :prev_month, :div, class: 'cursor-pointer text-green-500 hover:bg-green-100 h-8 w-8 rounded-full flex justify-center items-center' do %>
@@ -69,18 +65,18 @@
     </div>
 
     <% if @user && @events.empty? && (@start_date != Date.today) %>
-      <div id="my-agenda__filter" class="w-11/12 p-2 my-6 mt-3 text-sm text-center text-gray-600 rounded-lg bg-gray-50">
+      <div id="my-agenda__filter" class="p-2 my-6 mt-3 text-sm text-center text-gray-600 rounded-lg bg-gray-50">
         Sem eventos na sua agenda neste dia.
         <%= reflex_tag :clear_filter, :div, class: 'text-center cursor-pointer underline text-gray-400 text-sm' do %>
           Remover filtro
         <% end %>
       </div>
     <% elsif @user && @events.empty? %>
-      <div id="my-agenda__filter" class="w-11/12 p-2 my-6 mt-3 text-sm text-center text-gray-600 rounded-lg bg-gray-50">
+      <div id="my-agenda__filter" class="p-2 my-6 mt-3 text-sm text-center text-gray-600 rounded-lg bg-gray-50">
         Você não tem eventos salvos na sua agenda
       </div>
     <% elsif !@user %>
-      <div class="w-11/12 p-2 my-6 mt-3 text-sm text-center text-gray-600 rounded-lg bg-gray-50">
+      <div class="p-2 my-6 mt-3 text-sm text-center text-gray-600 rounded-lg bg-gray-50">
         <%= link_to 'Crie uma conta', new_user_registration_path, data: {'gtm-action': 'click', 'gtm-category': 'Funil', 'gtm-label': 'Criar meu perfil'}, class: 'underline text-green-500 hover:text-gray-500' %>
         para salvar seus eventos favoritos
       </div>
