--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -20,8 +20,7 @@
         <%#= link_to 'Criar conta', new_user_registration_path, data: {'gtm-action': 'click', 'gtm-category': 'Funil', 'gtm-label': 'Criar meu perfil'}, class: 'bg-green-300 float-right px-2 py-1 rounded text-green-700' %>
         <!--          </div>-->
         <%# elsif current_user.liked_events.size < 3 %>
-        <%= render Hero::SwipableComponent.new(user:   current_user,
-                                               events: @train_events) %>
+        <%= render Hero::SwipableComponent.new(user:   current_user) %>
         <%# else %>
         <%#= render Hero::TabsComponent.new(user:             current_user,
                                              selected_tab:     @selected_tab,
@@ -55,90 +54,90 @@
         </div>
       </div>
       <div id="user-resources-list" class="md:ml-8 md:mt-8 md:text-sm sticky top-12 transform">
-        <div id="friends-list" class="py-6 bg-white">
-          <h2 class="flex-1 pl-5 font-semibold leading-6 text-gray-800 group-hover:text-green-500 md:leading-normal md:pl-0 text-md">
-            Amigos (<%= current_user.friends_accepted.size rescue 0 %>)
-          </h2>
-          <% if current_user&.friends_accepted.present? %>
-            <div class="flex flex-wrap mt-3">
-              <%= render(UserChipSmallComponent.with_collection(current_user.friends_accepted, user: current_user)) %>
-            </div>
-          <% else %>
-            <div class="text-sm text-gray-400">
-              Você ainda não adicionou nenhum amigo
-            </div>
-          <% end %>
-        </div>
-        <div class="py-6 bg-white">
-          <h2 class="flex-1 pl-5 font-semibold leading-6 text-gray-800 group-hover:text-green-500 md:leading-normal md:pl-0 text-md">
-            Pessoas que sigo
-          </h2>
-          <% if current_user&.following_users.present? %>
-            <div class="w-screen mt-3 md:w-full">
-              <div class="flex flex-wrap space-y-2">
-                <% current_user&.following_places_and_organizers.sort_by { |f| f.events.active.size }.reverse!.each do |resource| %>
-                  <a onclick="window.AnimateModule.animatePageHide()" href="<%= organizer_or_place_path resource %>" class="relative flex items-center py-1 pl-1 pr-3 mb-2 mr-2 border border-gray-100 rounded-full w-content">
-                    <%= resource.details_name.titleize %>
-                    <% if resource.events.active.size > 0 %>
-  									<span class="absolute right-0 inline-flex items-center justify-center w-4 h-4 mr-2 -mt-4 text-sm font-bold bg-white rounded-full">
-  										<%= resource.events.active.size %>
-  									</span>
-                    <% end %>
-                  </a>
-                <% end %>
-              </div>
-            </div>
-          <% else %>
-            <div class="text-sm text-gray-400">
-              Você não segue nenhuma pessoa ainda
-            </div>
-          <% end %>
-        </div>
-        <div class="py-6 bg-white">
-          <h2 class="flex-1 pl-5 font-semibold leading-6 text-gray-800 group-hover:text-green-500 md:leading-normal md:pl-0 text-md">
-            Locais que sigo
-          </h2>
-          <% if current_user&.following_places.present? %>
-            <div class="mt-3">
-              <div class="flex flex-wrap space-y-2">
-                <% current_user&.following_places_and_organizers.sort_by { |f| f.events.active.size }.reverse!.each do |resource| %>
-                  <a onclick="window.AnimateModule.animatePageHide()" href="<%= organizer_or_place_path resource %>" class="relative flex items-center p-1 text-sm font-medium text-gray-400 border border-gray-100 rounded-full w-content">
-                    <%= resource.details_name.titleize %>
-                  </a>
-                <% end %>
-              </div>
-            </div>
-          <% else %>
-            <div class="text-sm text-gray-400">
-              Você não segue nenhum local ainda
-            </div>
-          <% end %>
-        </div>
-        <div class="py-6 bg-white">
-          <h2 class="flex-1 font-semibold leading-6 text-gray-800 group-hover:text-green-500 md:leading-normal md:pl-0 text-md">
-            Organizadores que sigo
-          </h2>
-          <% if current_user&.following_organizers.present? %>
-            <div class="mt-3">
-              <div class="flex flex-wrap space-y-2">
-                <% current_user&.following_organizers.sort_by { |f| f.events.active.size }.reverse!.each do |resource| %>
-                  <a onclick="window.AnimateModule.animatePageHide()" href="<%= organizer_or_place_path resource %>" class="relative inline-block px-3 py-2 mt-2 mr-2 text-sm font-medium text-green-600 bg-green-100 border-2 border-green-200 rounded-full cursor-pointer h-content hover:bg-purple-300">
-                    <%= resource.details_name.titleize %>
-                    <% if resource.events.active.size > 0 %>
-  									<span class="absolute right-0 inline-flex items-center justify-center w-4 h-4 mr-2 -mt-4 text-sm font-bold bg-white rounded-full">
-  										<%= resource.events.active.size %>
-  									</span>
-                    <% end %>
-                  </a>
-                <% end %>
-              </div>
-            </div>
-          <% else %>
-            <div class="text-sm text-gray-400">
-              Você não segue nenhum organizador ainda
-            </div>
-          <% end %>
-        </div>
+<!--        <div id="friends-list" class="py-6 bg-white">-->
+<!--          <h2 class="flex-1 pl-5 font-semibold leading-6 text-gray-800 group-hover:text-green-500 md:leading-normal md:pl-0 text-md">-->
+<!--            Amigos (<%#= current_user.friends_accepted.size rescue 0 %>)-->
+<!--          </h2>-->
+          <%# if current_user&.friends_accepted.present? %>
+<!--            <div class="flex flex-wrap mt-3">-->
+              <%#= render(UserChipSmallComponent.with_collection(current_user.friends_accepted, user: current_user)) %>
+<!--            </div>-->
+          <%# else %>
+<!--            <div class="text-sm text-gray-400">-->
+<!--              Você ainda não adicionou nenhum amigo-->
+<!--            </div>-->
+          <%# end %>
+<!--        </div>-->
+<!--        <div class="py-6 bg-white">-->
+<!--          <h2 class="flex-1 pl-5 font-semibold leading-6 text-gray-800 group-hover:text-green-500 md:leading-normal md:pl-0 text-md">-->
+<!--            Pessoas que sigo-->
+<!--          </h2>-->
+          <%# if current_user&.following_users.present? %>
+<!--            <div class="w-screen mt-3 md:w-full">-->
+<!--              <div class="flex flex-wrap space-y-2">-->
+                <%# current_user&.following_places_and_organizers.sort_by { |f| f.events.active.size }.reverse!.each do |resource| %>
+<!--                  <a onclick="window.AnimateModule.animatePageHide()" href="<%#= organizer_or_place_path resource %>" class="relative flex items-center py-1 pl-1 pr-3 mb-2 mr-2 border border-gray-100 rounded-full w-content">-->
+                    <%#= resource.details_name.titleize %>
+                    <%# if resource.events.active.size > 0 %>
+<!--  									<span class="absolute right-0 inline-flex items-center justify-center w-4 h-4 mr-2 -mt-4 text-sm font-bold bg-white rounded-full">-->
+  										<%#= resource.events.active.size %>
+<!--  									</span>-->
+                    <%# end %>
+<!--                  </a>-->
+                <%# end %>
+<!--              </div>-->
+<!--            </div>-->
+          <%# else %>
+<!--            <div class="text-sm text-gray-400">-->
+<!--              Você não segue nenhuma pessoa ainda-->
+<!--            </div>-->
+          <%# end %>
+<!--        </div>-->
+<!--        <div class="py-6 bg-white">-->
+<!--          <h2 class="flex-1 pl-5 font-semibold leading-6 text-gray-800 group-hover:text-green-500 md:leading-normal md:pl-0 text-md">-->
+<!--            Locais que sigo-->
+<!--          </h2>-->
+          <%# if current_user&.following_places.present? %>
+<!--            <div class="mt-3">-->
+<!--              <div class="flex flex-wrap space-y-2">-->
+                <%# current_user&.following_places_and_organizers.sort_by { |f| f.events.active.size }.reverse!.each do |resource| %>
+<!--                  <a onclick="window.AnimateModule.animatePageHide()" href="<%#= organizer_or_place_path resource %>" class="relative flex items-center p-1 text-sm font-medium text-gray-400 border border-gray-100 rounded-full w-content">-->
+                    <%#= resource.details_name.titleize %>
+<!--                  </a>-->
+                <%# end %>
+<!--              </div>-->
+<!--            </div>-->
+          <%# else %>
+<!--            <div class="text-sm text-gray-400">-->
+<!--              Você não segue nenhum local ainda-->
+<!--            </div>-->
+          <%# end %>
+<!--        </div>-->
+<!--        <div class="py-6 bg-white">-->
+<!--          <h2 class="flex-1 font-semibold leading-6 text-gray-800 group-hover:text-green-500 md:leading-normal md:pl-0 text-md">-->
+<!--            Organizadores que sigo-->
+<!--          </h2>-->
+          <%# if current_user&.following_organizers.present? %>
+<!--            <div class="mt-3">-->
+<!--              <div class="flex flex-wrap space-y-2">-->
+                <%# current_user&.following_organizers.sort_by { |f| f.events.active.size }.reverse!.each do |resource| %>
+<!--                  <a onclick="window.AnimateModule.animatePageHide()" href="<%#= organizer_or_place_path resource %>" class="relative inline-block px-3 py-2 mt-2 mr-2 text-sm font-medium text-green-600 bg-green-100 border-2 border-green-200 rounded-full cursor-pointer h-content hover:bg-purple-300">-->
+                    <%#= resource.details_name.titleize %>
+                    <%# if resource.events.active.size > 0 %>
+<!--  									<span class="absolute right-0 inline-flex items-center justify-center w-4 h-4 mr-2 -mt-4 text-sm font-bold bg-white rounded-full">-->
+  										<%#= resource.events.active.size %>
+<!--  									</span>-->
+                    <%# end %>
+<!--                  </a>-->
+                <%# end %>
+<!--              </div>-->
+<!--            </div>-->
+          <%# else %>
+<!--            <div class="text-sm text-gray-400">-->
+<!--              Você não segue nenhum organizador ainda-->
+<!--            </div>-->
+          <%# end %>
+<!--        </div>-->
       </div>
     </section>
   <% end %>
