--- a/web/app/components/hero/train_event_component.html.erb
+++ b/web/app/components/hero/train_event_component.html.erb
@@ -1,36 +1,52 @@
-<%= component_controller data: {'hero--train-event-id': @event.id} do %>
-  <div class="relative flex flex-col w-64 bg-white rounded-lg shadow h-content tap-highlight-none md:border md:border-gray-200"
-       id="<%= dom_id @event, :train %>">
-    <div class="relative overflow-hidden">
-      <div class="bg-white rounded-t-lg aspect-ratio-16/9"></div>
-      <%= image_tag helpers.shrine_image_url(@event, :feed), {
-          loading: :lazy,
-          class:   'absolute h-32 h-full left-0 object-center object-cover top-0 w-full rounded-t-lg overflow-hidden',
-          onerror: "this.style.opacity='0'"
-      } if @event.image[:feed] %>
-    </div>
-    <div class="pt-1 px-3 pb-2 quinta text-gray-600 <%= @event.day_of_week['decorator'].parameterize %>"
-         data-target="event.date">
-      <div class="inline-block mt-1 text-base font-medium text-gray-800">
-        <%= @event.details_name %>
-      </div>
-      <span class="inline-block mt-1 text-sm  leading-snug text-gray-600">
-				<%= helpers.limit_description_size @event.details_description %>
-			</span>
-      <div class="flex justify-center mt-2 -mb-6 space-x-2">
-        <%= reflex_tag :like, :div, class: 'bg-green-50 border-2 border-green-300 cursor-pointer duration-100 ease-linear flex font-medium hover:px-3 hover:scale-105 hover:text-green-400 items-center justify-center p-3 rounded-full select-none shadow tap-highlight-none text-green-500 text-sm transform transition-transform' do %>
-          <svg class="h-5 text-green-500 fill-current hover:scale-150" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>
-            <path d="M13.12 2.06L7.58 7.6c-.37.37-.58.88-.58 1.41V19c0 1.1.9 2 2 2h9c.8 0 1.52-.48 1.84-1.21l3.26-7.61C23.94 10.2 22.49 8 20.34 8h-5.65l.95-4.58c.1-.5-.05-1.01-.41-1.37-.59-.58-1.53-.58-2.11.01zM3 21c1.1 0 2-.9 2-2v-8c0-1.1-.9-2-2-2s-2 .9-2 2v8c0 1.1.9 2 2 2z"/>
-          </svg>
-        <% end %>
-        <%= reflex_tag :dislike, :div, class: 'bg-red-50 border-2 border-red-200 cursor-pointer duration-100 ease-linear flex font-medium hover:px-3 hover:scale-105 hover:text-red-400 items-center justify-center p-3 rounded-full select-none shadow tap-highlight-none text-red-500 text-sm transform transition-transform' do %>
-          <svg class="h-5 text-red-500 fill-current hover:scale-150" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>
-            <path d="M10.88 21.94l5.53-5.54c.37-.37.58-.88.58-1.41V5c0-1.1-.9-2-2-2H6c-.8 0-1.52.48-1.83 1.21L.91 11.82C.06 13.8 1.51 16 3.66 16h5.65l-.95 4.58c-.1.5.05 1.01.41 1.37.59.58 1.53.58 2.11-.01zM21 3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2s2-.9 2-2V5c0-1.1-.9-2-2-2z"/>
-          </svg>
-        <% end %>
-      </div>
-    </div>
-  </div>
+<%= component_controller id: dom_id(@event, :hero), data: { 'hero--train-event-open-in-sidebar': @open_in_sidebar } do %>
+	<div class="flex p-5 border-b md:border-0 border-gray-50">
+		<div class="flex flex-col mr-3 space-y-1">
+			<%= reflex_tag :like, :div, class: 'h-full bg-green-50 hover:bg-green-200 cursor-pointer duration-100 ease-linear flex font-medium hover:px-3 hover:scale-105 hover:text-green-400 items-center justify-center p-2 rounded-lg select-none tap-highlight-none text-green-500 text-sm transform transition-transform' do %>
+				<svg class="h-5 text-green-500 fill-current hover:scale-150" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>
+					<path d="M13.12 2.06L7.58 7.6c-.37.37-.58.88-.58 1.41V19c0 1.1.9 2 2 2h9c.8 0 1.52-.48 1.84-1.21l3.26-7.61C23.94 10.2 22.49 8 20.34 8h-5.65l.95-4.58c.1-.5-.05-1.01-.41-1.37-.59-.58-1.53-.58-2.11.01zM3 21c1.1 0 2-.9 2-2v-8c0-1.1-.9-2-2-2s-2 .9-2 2v8c0 1.1.9 2 2 2z"/>
+				</svg>
+			<% end %>
+			<%= reflex_tag :dislike, :div, class: 'h-full bg-red-50 hover:bg-red-200 cursor-pointer duration-100 ease-linear flex font-medium hover:px-3 hover:scale-105 hover:text-red-400 items-center justify-center p-2 rounded-lg select-none tap-highlight-none text-red-500 text-sm transform transition-transform' do %>
+				<svg class="h-5 text-red-500 fill-current hover:scale-150" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>
+					<path d="M10.88 21.94l5.53-5.54c.37-.37.58-.88.58-1.41V5c0-1.1-.9-2-2-2H6c-.8 0-1.52.48-1.83 1.21L.91 11.82C.06 13.8 1.51 16 3.66 16h5.65l-.95 4.58c-.1.5.05 1.01.41 1.37.59.58 1.53.58 2.11-.01zM21 3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2s2-.9 2-2V5c0-1.1-.9-2-2-2z"/>
+				</svg>
+			<% end %>
+		</div>
+		<div class="pr-6 flex-1">
+			<div class="mb-1 text-sm  text-gray-400">
+				<%= @event.categories_primary_name.titleize %>
+			</div>
+			<%= content_tag :a,
+											href:  event_path(@event),
+											data:  {
+												action:     'click->hero--train-event#openEvent',
+												url:        event_path(@event),
+												'event-id': @event.id
+											},
+											class: 'font-semibold md:hover:underline mb-1 leading-snug text-gray-700' do %>
+				<%= @event.details_name %>
+			<% end %>
+			<div class="text-sm  text-gray-500">
+				<%= link_to helpers.limit_place_name_size(@event.place_details_name, 24), place_path(@event.place), class: 'md:hover:underline' %>
+			</div>
+		</div>
+		<div>
+			<div data-controller="ripple" class="shadow-xs relative w-32 mt-6 overflow-hidden rounded ripple ripple-white">
+				<%= link_to event_path(@event),
+										data: {
+											action:     'click->hero--train-event#openEvent',
+											'event-id': @event.id
+										} do %>
+					<div class="bg-gray-50 aspect-ratio-16/9"></div>
+					<%= image_tag helpers.shrine_image_url(@event, :feed), {
+						loading: :lazy,
+						class:   'absolute cursor-pointer h-full left-0 object-center object-cover top-0 w-full overflow-hidden',
+						onerror: "this.style.opacity='0'"
+					} rescue nil %>
+				<% end %>
+			</div>
+		</div>
+	</div>
 <% end %>
